--- a/package.json
+++ b/package.json
@@ -20,14 +20,14 @@
     "react": "18.0.0",
     "react-dom": "18.0.0",
     "react-native": "0.69.5",
-    "react-native-gesture-handler": "^2.5.0",
+    "react-native-gesture-handler": "~2.5.0",
     "react-native-reanimated": "~2.9.1",
-    "react-native-safe-area-context": "^4.3.1",
+    "react-native-safe-area-context": "4.3.1",
     "react-native-screens": "~3.15.0",
     "react-native-web": "~0.18.7"
   },
   "devDependencies": {
-    "@babel/core": "^7.12.9"
+    "@babel/core": "^7.18.6"
   },
   "private": true
 }
