--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "@react-navigation/drawer": "^6.4.4",
     "@react-navigation/native": "^6.0.11",
     "@react-navigation/native-stack": "^6.7.0",
-    "expo": "^46.0.10",
+    "expo": "^46.0.16",
     "expo-font": "~10.2.0",
     "expo-splash-screen": "~0.16.2",
     "expo-status-bar": "~1.4.0",
@@ -21,9 +21,10 @@
     "react-dom": "18.0.0",
     "react-native": "0.69.5",
     "react-native-gesture-handler": "~2.5.0",
-    "react-native-reanimated": "~2.9.1",
+    "react-native-reanimated": "^2.12.0",
     "react-native-safe-area-context": "4.3.1",
     "react-native-screens": "~3.15.0",
+    "react-native-swipe-gestures": "^1.0.5",
     "react-native-web": "~0.18.7"
   },
   "devDependencies": {
