--- a/app.json
+++ b/app.json
@@ -5,7 +5,10 @@
     "version": "1.0.0",
     "assetBundlePatterns": [
       "**/*"
-    ]
+    ],
+    "android": {
+      "package": "com.kappo.artroom"
+    }
   },
   "name": "my-project"
 }
